--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -15,8 +15,11 @@ hero:
       link: https://github.com/iqbalamo93/NeuralNarrative/
       icon: external
 ---
-
+import '../../styles/index.css' 
 import { Card, CardGrid ,LinkCard} from '@astrojs/starlight/components';
+import NextCard from "../../components/NextCard";
+
+<NextCard client:visible header="Header"/>
 
 ## Catalogue
 
