--- a/src/content/docs/blogs/Transformers/05_Transformer.mdx
+++ b/src/content/docs/blogs/Transformers/05_Transformer.mdx
@@ -667,7 +667,7 @@ This class is the heart of the Transformer model, tying together all the special
 </Fragment>
 
 <Fragment>
-## Build transformer : Function
+## Build transformer
 ```python
 def build_transformer(src_vocab_size: int, tgt_vocab_size: int,
                       src_seq_len: int, tgt_seq_len: int, d_model:int = 512,
