--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -19,9 +19,10 @@ import '../../styles/index.css'
 import { Card, CardGrid ,LinkCard} from '@astrojs/starlight/components';
 import NextCard from "../../components/NextCard";
 
+import ProjectsCard from "../../components/Projectscard"
+
 
 <NextCard client:visible header="Header"/>
-
 
 
 ## Catalogue
@@ -52,3 +53,5 @@ import NextCard from "../../components/NextCard";
 		/>
 	</Card>
 </CardGrid>
+
+<ProjectsCard/>
